cabal-version:      2.4
name:               bootstrap-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sudip Bhattarai
maintainer:         sudipbhattarai100@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bootstrap-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
          base ^>=4.14.3.0
        , QuickCheck -any
        , tasty -any
        , tasty-hunit -any
        , containers
        , bytestring
        , serialise
        , cborg
        , cardano-binary
        , text
        , aeson
        , text-conversions
        , cardano-api
        , cardano-ledger-babbage
        , cardano-ledger-alonzo
        , cardano-ledger-shelley
        , cardano-slotting
        , plutus-ledger-api
        , plutus-tx
        , ouroboros-network
        , cardano-binary
        , vector
        , unordered-containers
        , time
    hs-source-dirs:   app
    default-language: Haskell2010
